Hid the newpage command inside a comment when viewing org files in github

--- a/Functional-Programming/AST/AST.tex
+++ b/Functional-Programming/AST/AST.tex
@@ -1,4 +1,4 @@
-% Created 2022-12-04 Sun 20:47
+% Created 2022-12-04 Sun 20:51
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -26,9 +26,9 @@
 
 \maketitle
 \section{2018 Q3}
-\label{sec:org266044c}
+\label{sec:org8e3045b}
 \subsection{Part (a)}
-\label{sec:orgf54e15a}
+\label{sec:org2b0977c}
 \begin{verbatim}
 product []     = 1
 product (0:_)  = 0
@@ -43,9 +43,9 @@ product (10:[13,0,42])     = 10 * product [13,0,42] -- third case
 \includegraphics[width=115mm]{./product-xs.png}
 \end{center}
 \section{2018 Q3}
-\label{sec:org91b99c0}
+\label{sec:org674e1c4}
 \subsection{Part (a)}
-\label{sec:org4efbd37}
+\label{sec:orgbbae674}
 \begin{verbatim}
 length [] = 0
 length (x:xs) 1 + length xs
@@ -59,9 +59,9 @@ length (3:[39])   = 1 + length [39] -- second case
 \includegraphics[width=160mm]{./length-xs.png}
 \end{center}
 \section{2016 Q3}
-\label{sec:org112e908}
+\label{sec:org3ba5018}
 \subsection{Part (b)}
-\label{sec:orgc6af4e8}
+\label{sec:org48eeeaf}
 \begin{verbatim}
 prod []     = 1
 prod (0:_)  = 0
@@ -76,9 +76,9 @@ prod (3:[14,0,999])    = 3 * prod [14,0,999] -- third case
 \includegraphics[width=155mm]{./prod-xs.png}
 \end{center}
 \section{2015 Q4}
-\label{sec:orge060f8f}
+\label{sec:orgaa7df96}
 \subsection{Part (a)}
-\label{sec:org7540336}
+\label{sec:org783334c}
 \begin{verbatim}
 diffsq []     = 0
 diffsq (x:xs) = x * x - diffsq xs
@@ -92,9 +92,9 @@ diffsq (2:[3])          = (2 * 2) - diffsq [3] -- second case
 \includegraphics[width=160mm]{./diffsq-xs.png}
 \end{center}
 \section{2014 Q4}
-\label{sec:orgc6524b5}
+\label{sec:orgd9fe989}
 \subsection{Part (a)}
-\label{sec:orgf8619b4}
+\label{sec:orge4a781f}
 \begin{verbatim}
 sum []     = 0
 sum (x:xs) = x + sum xs
@@ -109,9 +109,9 @@ sum (3:[39])    = 3 + sum [39] -- second case
 \end{center}
 \newpage
 \section{2013 Q4}
-\label{sec:org7847725}
+\label{sec:org4a3a311}
 \subsection{Part (a)}
-\label{sec:org3c437bc}
+\label{sec:org11ea6e6}
 \begin{verbatim}
 sumsq []     = 0
 sumsq (x:xs) = x * x - diffsq xs
