--- a/Functional-Programming/AST/AST.org
+++ b/Functional-Programming/AST/AST.org
@@ -69,7 +69,7 @@ sum (3:[39])    = 3 + sum [39] -- second case
 #+END_SRC
 #+ATTR_LATEX: :width 160mm
 [[./sum-xs.png]]
-\newpage
+#+LATEX: \newpage
 * 2013 Q4
 ** Part (a)
 #+BEGIN_SRC haskell
