--- a/Functional-Programming/IO/IO.tex
+++ b/Functional-Programming/IO/IO.tex
@@ -1,10 +1,35 @@
-#+TITLE: Input and Ouput Exam Solutions
-#+AUTHOR: Alexander Sepelenco
-#+OPTIONS: toc:nil date:nil ':t *:nil -:nil ::nil <:nil ^:til author:nil d:nil
-#+LATEX_HEADER: \usepackage[margin=0.85in]{geometry}
-* 2021 Q3
-** Part (b)
-#+BEGIN_SRC haskell
+% Created 2022-12-04 Sun 20:52
+% Intended LaTeX compiler: pdflatex
+\documentclass[11pt]{article}
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+\usepackage{graphicx}
+\usepackage{longtable}
+\usepackage{wrapfig}
+\usepackage{rotating}
+\usepackage[normalem]{ulem}
+\usepackage{amsmath}
+\usepackage{amssymb}
+\usepackage{capt-of}
+\usepackage{hyperref}
+\usepackage[margin=0.85in]{geometry}
+\date{}
+\title{Input and Ouput Exam Solutions}
+\hypersetup{
+ pdfauthor={Alexander Sepelenco},
+ pdftitle={Input and Ouput Exam Solutions},
+ pdfkeywords={},
+ pdfsubject={},
+ pdfcreator={Emacs 28.2 (Org mode 9.6)}, 
+ pdflang={English}}
+\begin{document}
+
+\maketitle
+\section{2021 Q3}
+\label{sec:org077e20f}
+\subsection{Part (b)}
+\label{sec:org44abff3}
+\begin{verbatim}
 main :: IO ()
 main = do
  emptyOutputFile -- reset SHOUT.log since we want a new file called SHOUT.log
@@ -22,11 +47,13 @@ shoutIntoFile (xs:xss) = do
  fileContent <- readFile xs
  appendFile "SHOUT.log" . map (toUpper) $ fileContent
  shoutIntoFile xss
-#+END_SRC
-#+LATEX: \newpage
-* 2021 Q3
-** Part (c)
-#+BEGIN_SRC haskell
+\end{verbatim}
+\newpage
+\section{2021 Q3}
+\label{sec:org9623f5a}
+\subsection{Part (c)}
+\label{sec:org007737f}
+\begin{verbatim}
 main :: IO ()
 main = do
  interleaves "input1.txt" "input2.txt"
@@ -44,10 +71,12 @@ interleaves' zss xss [] = zss ++ xss
 interleaves' zss [] yss = zss ++ yss
 interleaves' zss (xs:xss) (ys:yss) = (interleaves' $! accumulator) xss yss
  where accumulator = zss ++ (xs : [ys])
-#+END_SRC
-* 2019 Q3
-** Part (c)
-#+BEGIN_SRC haskell
+\end{verbatim}
+\section{2019 Q3}
+\label{sec:orgbe95f44}
+\subsection{Part (c)}
+\label{sec:org588d7a6}
+\begin{verbatim}
 main :: IO ()
 main = do
   putStr "Input a file with the form <root.ext>: "
@@ -55,30 +84,35 @@ main = do
   fileContents <- readFile file
   writeFile (outputFile file) . map (toLower) $ fileContents
     where outputFile file = takeWhile (/='.') file ++ ".log"
-#+END_SRC
-#+LATEX: \newpage
-* 2018 Q3
-** Part (c)
-#+BEGIN_SRC haskell
+\end{verbatim}
+\newpage
+\section{2018 Q3}
+\label{sec:org77b5ddf}
+\subsection{Part (c)}
+\label{sec:orgce3d31e}
+\begin{verbatim}
 toDOS :: FilePath -> FilePath
 toDOS file = map (toUpper) (take 8 fileName) ++ map (toUpper) (take 4 fileExtension)
  where fileName      = takeWhile (/= '.') file
        fileExtension = dropWhile (/= '.') file -- includes dot therefore take 4 == .DAT
        eightFileName = take 8 fileName
 
-#+END_SRC
-** Part (d)
-#+BEGIN_SRC haskell
+\end{verbatim}
+\subsection{Part (d)}
+\label{sec:org4775c0f}
+\begin{verbatim}
 main :: IO ()
 main = do
  putStr "Input a fileName with an extension: "
  file <- getLine
  fileContents <- readFile . toDOS $ file
  writeFile "LOWER.OUT" . map (toLower) $ fileContents
-#+END_SRC
-* 2015 Q3
-** Part (c)
-#+BEGIN_SRC haskell
+\end{verbatim}
+\section{2015 Q3}
+\label{sec:orga32876c}
+\subsection{Part (c)}
+\label{sec:orgd019baa}
+\begin{verbatim}
 hash :: String -> Int
 hash str = (sum (map ord str)) `mod` 255
 
@@ -90,10 +124,12 @@ main = do
  writeFile (outputFile fileName) (show . hash $ fileContents)
   where inputFile fileName  = fileName ++ ".in"
         outputFile fileName = fileName ++ ".chk"
-#+END_SRC
-* 2014 Q4
-** Part (d)
-#+BEGIN_SRC haskell
+\end{verbatim}
+\section{2014 Q4}
+\label{sec:org2c48a00}
+\subsection{Part (d)}
+\label{sec:org54fa0f8}
+\begin{verbatim}
 main = do
  putStr "Input a filen of the form <Root>.<Extensions>: "
  file <- getLine
@@ -105,13 +141,16 @@ toDOS :: FilePath -> FilePath
 toDOS file = map (toUpper) dosNam ++ map (toUpper) dosExt
  where dosNam = take 8 $ takeWhile (/= '.') file
        dosExt = take 4 $ dropWhile (/= '.') file -- take 4 since . must be included
-#+END_SRC
-* 2013 Q4
-** Part (d)
-#+BEGIN_SRC haskell
+\end{verbatim}
+\section{2013 Q4}
+\label{sec:orge1054d1}
+\subsection{Part (d)}
+\label{sec:orgaacfc27}
+\begin{verbatim}
 main = do
  putStr "Input a filename without the extension: "
  file <- getLine
  fileContents <- readFile (file++".in")
  writeFile (file++".out") . map (toUpper) $ fileContents
-#+END_SRC
+\end{verbatim}
+\end{document}
