--- a/Functional-Programming/Lazy-Strict/Lazy-Strict.org
+++ b/Functional-Programming/Lazy-Strict/Lazy-Strict.org
@@ -1,5 +1,5 @@
 #+TITLE: Lazy and Strict Exam Solutions
-#+AUTHOR: Silent
+#+AUTHOR: Alexander Sepelenco
 #+OPTIONS: toc:nil date:nil ':t *:nil -:nil ::nil <:nil ^:til author:nil d:nil
 #+LATEX_HEADER: \usepackage[margin=0.85in]{geometry}
 * 2019 Q3
@@ -78,7 +78,6 @@ take 2 (quadup 10)
 take 2 (10 : quadup (10+4))
 10 : (take (2-1) (quadup (10+4)))
 10 : (take 1 (quadup (10+4)))
-10 : (take 1 : ((10+4) : quadup ((10+4)+4))
 10 : (take 1 : ((10+4) : quadup ((10+4)+4))
 10 : (10+4) : (take (1-1) (quadup ((10+4)+4)))
 10 : (10+4) : (take 0 (quadup ((10+4)+4)))
