--- a/Functional-Programming/Polymorphism/Polymorphism.org
+++ b/Functional-Programming/Polymorphism/Polymorphism.org
@@ -1,5 +1,5 @@
 #+TITLE: Polymorphism/Polymorphism Restrictions
-#+AUTHOR: Silent
+#+AUTHOR: Alexander Sepelenco
 #+OPTIONS: toc:nil date:nil ':t *:nil -:nil ::nil <:nil ^:til author:nil d:nil
 #+LATEX_HEADER: \usepackage[margin=0.85in]{geometry}
 * Polymorphism
