Fixing up some minor mistakes with lazinesss and HOF

--- a/Functional-Programming/Lazy-Strict/Lazy-Strict.org
+++ b/Functional-Programming/Lazy-Strict/Lazy-Strict.org
@@ -37,8 +37,8 @@ take 2 (42 : from (42+1))
 42 : (take (2-1) (from(42+1)))
 42 : (take 1 (from(42+1)))
 42 : (take 1 ((42+1) : from((42+1)+1)))
-42 : (42+1) : (take (1-1) (from(((42+1)+1)+1)))
-42 : (42+1) : (take 0 (from(((42+1)+1)+1)))
+42 : (42+1) : (take (1-1) (from((42+1)+1)))
+42 : (42+1) : (take 0 (from((42+1)+1)))
 42 : (42+1) : []
 -- We are done computing the list (Evaluatable)
 #+END_SRC
@@ -78,6 +78,7 @@ take 2 (quadup 10)
 take 2 (10 : quadup (10+4))
 10 : (take (2-1) (quadup (10+4)))
 10 : (take 1 (quadup (10+4)))
+10 : (take 1 : ((10+4) : quadup ((10+4)+4))
 10 : (take 1 : ((10+4) : quadup ((10+4)+4))
 10 : (10+4) : (take (1-1) (quadup ((10+4)+4)))
 10 : (10+4) : (take 0 (quadup ((10+4)+4)))
@@ -119,9 +120,9 @@ take 2 (evenup 2)
 take 2 (2 : evenup(2+2))
 2 : (take (2-1) (evenup(2+2)))
 2 : (take 1 (evenup(2+2)))
-2 : (take 1 ((2+2) : evenup(2+2))
-2 : (2+2) : (take (1-1) (evenup(2+2)))
-2 : (2+2) : (take 0 (evenup(2+2)))
+2 : (take 1 ((2+2) : evenup(2+(2+2)))
+2 : (2+2) : (take (1-1) (evenup(2+(2+2))))
+2 : (2+2) : (take 0 (evenup(2+(2+2))))
 2 : (2+2) : []
 -- We are done computing the list (Evaluatable)
 #+END_SRC
