--- a/Functional-Programming/HOF/HOF.org
+++ b/Functional-Programming/HOF/HOF.org
@@ -123,7 +123,7 @@ hof :: (a -> b -> c) -> [a] -> [b] -> [c]
 f1 = hof (*)
 f2 = hof (+)
 f3 = hof (\x y -> (x y))
-f4 = hof (\x y -> (x,y))
+f4 = hof (\x y -> (y,x))
 f5 = hof (\x y -> (const x y))
 #+END_SRC
 ** Part (d)
