Cleaned up 2020 part c done

--- a/Functional-Programming/HOF/HOF.org
+++ b/Functional-Programming/HOF/HOF.org
@@ -63,7 +63,7 @@ hof (+) 1 [1,2,3]
 hof (+) (1 + 1) [2,3]
 hof (+) ((1 + 1) + 2) [3]
 hof (+) (((1 + 1) + 2)+ 3) []
-hof (+) (((1 + 1) + 2)+ 3) = (((1 + 1) + 2) + 3) = 7
+hof (+) (((1 + 1) + 2)+ 3) = 7
 
 foldl :: (a -> b -> a) -> a -> [b] -> a
 foldl (+) 1 [1,2,3]
