--- a/Functional-Programming/HOF/HOF.org
+++ b/Functional-Programming/HOF/HOF.org
@@ -29,7 +29,7 @@ hof (+) (1 + 4) : (2 + 5) : hof [3,6]
 hof (+) (1 + 4) : (2 + 5) : (3 + 6) : hof []
 hof (+) (1 + 4) : (2 + 5) : (3 + 6) : []
 
-zipWith :: (a -> b -> a) -> [a] -> [b] -> c
+zipWith :: (a -> b -> c) -> [a] -> [b] -> c
 zipWith (+) [1,2,3] [4,5,6]
 zipWith (+) (1 + 4) : hof [2,3] [5,6]
 zipWith (+) (1 + 4) : (2 + 5) : hof [3,6]
