Fix hof binary addition from multiplication

--- a/Functional-Programming/HOF/HOF.org
+++ b/Functional-Programming/HOF/HOF.org
@@ -154,17 +154,17 @@ f5 = hof (\x y -> x + y * y)
 #+BEGIN_SRC haskell
 hof :: (a -> b -> b) -> b -> [a] -> b
 hof (+) 1 [1,2,3,4]
-hof (+) 1 * [2,3,4]
-hof (+) (1 * 2) [3,4]
-hof (+) (1 * (2 * 3)) [4]
-hof (+) (1 * (2 * (3 * 4))) []
-hof (+) (1 * (2 * (3 * 4))) = 24
+hof (+) 1 + [2,3,4]
+hof (+) (1 + 2) [3,4]
+hof (+) (1 + (2 + 3)) [4]
+hof (+) (1 + (2 + (3 + 4))) []
+hof (+) (1 + (2 + (3 + 4))) = 24
 
 foldr :: (a -> b -> b) -> b -> [a] -> b
 foldr (+) 1 [1,2,3,4]
-foldr (+) 1 * [2,3,4]
-foldr (+) (1 * 2) [3,4]
-foldr (+) (1 * (2 * 3)) [4]
-foldr (+) (1 * (2 * (3 * 4))) []
-foldr (+) (1 * (2 * (3 * 4))) = 24
+foldr (+) 1 + [2,3,4]
+foldr (+) (1 + 2) [3,4]
+foldr (+) (1 + (2 + 3)) [4]
+foldr (+) (1 + (2 + (3 + 4))) []
+foldr (+) (1 + (2 + (3 + 4))) = 24
 #+END_SRC
